--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist=py34,py35
+envlist=py27,py34,py35,py36
 
 [testenv]
-commands=unittest -v funcmap
+changedir=tests
+commands=discover
+deps=discover
