--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,7 @@
 envlist=py27,py34,py35
 
 [testenv]
-changedir=tests
-commands=discover
-deps=discover
+commands=python setup.py test
 
 [testenv:py27]
-deps=mock,discover
+deps=mock
